--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -67,6 +67,44 @@ header
                                     span
                                 div.link Меню
                             ul.header__burgerList
+                                li
+                                    a.link(href="/") Главная
+                                li
+                                    a.link(href="news.html") Новости
+                                li
+                                    a.link(href="ourGroups.html") Группы
+                                li.header__linkWithSublist
+                                    a.link.flex.flex.flex-a-c(href="order.html") Родителям
+                                    .header__sublistWrapper
+                                        ul.header__sublist.flex.flex-column.border-radius
+                                            li
+                                                a.link(href="order.html") Порядок приема в детсад
+                                            li
+                                                a.link(href="compensation.html") Компенсация оплаты за сад
+                                            li
+                                                a.link(href="blanks.html") Бланки заявлений
+                                            li
+                                                a.link(href="questions.html") Частые вопросы
+                                            li
+                                                a.link(href="advices.html") Советы специалистов
+                                            li
+                                                a.link(href='schools.html') Школы рядом с садиком
+                                li.header__linkWithSublist
+                                    a.link.flex.flex.flex-a-c(href="about.html") О нас
+                                    .header__sublistWrapper
+                                        ul.header__sublist.flex.flex-column.border-radius
+                                            li
+                                                a.link(href="collective.html") Наш коллектив
+                                            li
+                                                a.link(href="galleries.html") Наши галереи
+                                            li
+                                                a.link(href="ourVideos.html") Наши видео
+                                            li
+                                                a.link(href="achievements.html") Наши достижения
+                                            li
+                                                a.link(href="requisites.html") Наши реквизиты
+                                li
+                                    a.link(href="contacts.html") Контакты
                 .header__contacts
                     .header__telContainer
                         a.header__tel(href='tel:12345678') +7 (3532) 43-20-73
