--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -4,6 +4,10 @@
 
 $defaultTransitionDuration: .3s
 
+$maxContentWidth: 1440px
+$contentPaddings: 25px
+$contentMobilePaddings: 15px
+
 $stepNumber: 30
 
 $step: rem($stepNumber)
